<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sandspiral"
    android:backgroundTint="#d6FFFFFF"
    android:backgroundTintMode="src_over">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:fontFamily="@font/roboto"
        android:text="@string/weight_management_calc"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="9dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="65dp"
        android:layout_height="67dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:srcCompat="@drawable/stock_gurl"
        tools:layout_editor_absoluteX="324dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:background="@drawable/roundedbuttongreen"
        android:text="@string/lifestyle_button"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="647dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbuttonyellow"
        android:text="@string/save_button"
        tools:layout_editor_absoluteX="228dp"
        tools:layout_editor_absoluteY="644dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="336dp"
        android:layout_height="513dp"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="92dp">

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/current_weight_colon" />

        <EditText
            android:id="@+id/editTextTextPersonName10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/goal_weight_colon" />

        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/height_colon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTextPersonName12"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/sed_act" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/sed_act_array" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextPersonName13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/lb_to_lose_per_week_colon" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            tools:text="@string/basal_met_rate_colon" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            tools:text="@string/daily_cal_goal_colon" />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            tools:text="@string/current_bmi_colon" />

        <EditText
            android:id="@+id/editTextTextPersonName8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>