<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/my_prof_btn"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/toolbuttonred"
            android:text="@string/my_profile" />

        <Button
            android:id="@+id/weight_man_btn"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/toolbuttonorange"
            android:text="@string/weight_management" />

        <Button
            android:id="@+id/hike_btn"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/toolbuttonyellow"
            android:text="@string/nearby_hikes" />

        <Button
            android:id="@+id/weather_btn"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/toolbuttongreen"
            android:text="@string/local_weather" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>